--- a/5implementation.tex
+++ b/5implementation.tex
@@ -1,4 +1,14 @@
 
 
-\chapter{Implementation}\label{r:implementation}
+\chapter{Datalog on Spark}\label{r:implementation}
+
+\todo{
+  Opis narzędzia
+}
+
+\pomysl{typowe problemy na grafach
+porównamy się z SociaLite i Spark Pregel API
+further work: narzędzie pozwalające sprawdzić lub teoretyczny wynik jak sprawdzać, czy jest monotoniczność pozwalająca robić rekurencyjną agregację
+}
+
 
