DatalogRA with negation.

--- a/0introduction.tex
+++ b/0introduction.tex
@@ -1,5 +1,5 @@
 
-\chapter{Introduction}
+\chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 In recent years, the humanity has created many graph datasets much larger than those available ever before.
 Those graphs became a very popular object of research. Most notable examples are \emph{the Web graph} -- a graph of Internet websites and links between them, and all kinds of social networks. Other interesting graphs include transportation routes, similarity of scientific articles or citations among them.
