--- a/2pregel.tex
+++ b/2pregel.tex
@@ -146,11 +146,7 @@ Spark offers a set of high level tools that demonstrate the capabilities of the 
 \item GraphX, providing an interface for creating efficient graph algorithms, integrated with pre- and post- processing with regular Spark transformations
 \end{itemize}
 
-\subsection{Pregel API}
-One of the elements of the GraphX library is a general Pregel API, which allows for expressing programs written in the Pregel model and working on RDDs.
-Chapter \ref{r:implementation} describes an implementation of a Datalog API for Spark, which employs the method for translating Datalog and SociaLite programs to the Pregel model and uses Spark's Pregel API.
-
 \section{Other frameworks}
-\pomysl{Tutaj można by opisać inne frameworki: GPS, GraphLab, Giraph++. Ale może nie potrzeba?}
+\todo{Opisać krótko GPS, GraphLab, Giraph++}
 
 
