--- a/3socialite.tex
+++ b/3socialite.tex
@@ -109,7 +109,6 @@ A core concept in \datalogra is a \emph{join operation}. Join operations have th
 
 \begin{defn}[Join operation]
 A binary operation is a \emph{join} operation if it is idempotent, commutative and associative. 
-\todo{Maybe citation needed?}
 \end{defn}
 
 We usually denote a join operation with the symbol $\sqcup$.
@@ -413,7 +412,7 @@ Delta stepping in Distributed SociaLite %\section{Delta stepping in Distributed 
 Approximate evaluation in Distributed SociaLite %\section{Approximate evaluation in Distributed SociaLite}\label{s:approxdist}
 }
 
-\section{Original SociaLite}
+\section{Differences from the original SociaLite}
 
 The version of Datalog presented here differs from original description found in the original papers introducting SociaLite \cite{socialite, distsoc}.
 
