--- a/praca.tex
+++ b/praca.tex
@@ -117,13 +117,11 @@
 \maketitle
 
 \begin{abstract}
-\todo{Sprawdzić, Przetłumaczyć}
-W pracy przedstawiono implementację narzędzia, będącego rozszerzeniem do platformy Apache Spark, służącej do wykonywania rozproszonych obliczeń. Prezentowane rozszerzenie umożliwia wykonywanie na Apache Spark zapytań zapisanych w deklaratywnym języku, opartym o Datalog i jego późniejsze rozszerzenia. Takie podejście pozwala na wykonywanie obliczeń na istniejących architekturach do obliczeń rozproszonych za pomocą deklaratywnego języka zapytań, ze swojej natury dostępnego dla szerszego grona użytkowników niż typowe języki programowania. Szczególny nacisk położono na zastosowanie takich deklaratywnych zapytań do wykonywania obliczeń na bardzo dużych grafach.
+Distributed computations on graphs are becoming increasingly important with the emergence of large graphs such as social networks and the Web that contain huge amount of useful information.
+Currently existing solutions, such as iterated MapReduce, Pregel and GraphLab are relatively difficuly and require a significant level of fluency in programming.
+This thesis presents an implementation of a tool which extends a distributed computations platform, Apache Spark, with the capability of executing queries written in a variant of a declarative query language, Datalog, especially extended to better support graph algorithms.
+This approach makes it is possible to express graph algorithms in a declarative query language, accessible to a broader group of users than typical programming languages, and execute them on an existing infrastructure for distributed computations.
 \end{abstract}
-
-
-%W pracy przedstawiono implementację narzędzia, będącego rozszerzeniem do platformy Apache Spark, służącej do wykonywania rozproszonych obliczeń. Prezentowane rozszerzenie umożliwia wykonywanie na Apache Spark zapytań zapisanych w deklaratywnym języku, opartym o Datalog i jego późniejsze rozszerzenia. Takie podejście pozwala na wykonywanie obliczeń na istniejących architekturach do obliczeń rozproszonych za pomocą deklaratywnego języka zapytań, ze swojej natury dostępnego dla szerszego grona użytkowników niż typowe języki programowania. Szczególny nacisk położono na zastosowanie takich deklaratywnych zapytań do wykonywania obliczeń na bardzo dużych grafach.
-
 
 \tableofcontents
 %\listoffigures
