--- a/0introduction.tex
+++ b/0introduction.tex
@@ -28,7 +28,8 @@ We present an experimental implementation of the SociaLite language on the Apach
 
 The thesis consists of six chapters. In Chapter~\ref{r:datalog} we recall definitions of Datalog and its evaluation methods while Chapter~\ref{r:pregel} contains an introduction to the Pregel computation model. In Chapter~\ref{r:socialite} we describe the extensions introduced by SociaLite and provide formal definitions and general-case proofs which the original papers lack. Chapter \ref{r:s2p} shows the translation procedure from SociaLite to Pregel programs implemented in the S2P compiler, which is described in Chapter~\ref{r:implementation}. In Chapter~\ref{r:summary} we sketch the possible future work and the path to industrial implementation of the language using the S2P compiler.
 
-\section{Basic definitions}\label{r:basicdefs}
+\section*{Basic definitions}\label{r:basicdefs}
+\addcontentsline{toc}{section}{Basic definitions}
 \todo{Wstawić dodatkową narrację}
 
 We start by giving some basic definitions which will be used in this paper.
