--- a/praca.tex
+++ b/praca.tex
@@ -14,7 +14,10 @@
 \usepackage{color}
 \usepackage[section]{placeins}
 
-
+% kindle page geometry (no page numbers)
+%\usepackage[papersize={3.6in,4.8in},hmargin=0.1in,vmargin={0.1in,0.1in}]{geometry}
+%\usepackage{microtype}     % microtypography, reduces hyphenation
+ 
 
 \usepackage{program}
 
